--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Manrope", sans-serif;
-  background: #f5f5f5;
+  background: #ffffff;
 }
 
 .container {
@@ -118,7 +118,7 @@ h3 {
   font-size: 30px;
   line-height: 153px;
   color: #ad1818;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
   text-decoration: none;
 }
 .open-site:hover {
